--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "improvado"
 version = "0.1.0"
 description = ""
 authors = ["Denis Bolovin"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
