--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ pandas = "^1.5.3"
 requests = "^2.28.2"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
