--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ click = "^8.1.3"
 loguru = "^0.6.0"
 pandas = "^1.5.3"
 requests = "^2.28.2"
+charset_normalizer = "3.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
